# python-itoolkit

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README  README.md  bitbucket-pipelines.yml  contributors.txt  ftpcompile.sh  index.html  make-egg.sh  make-whl.sh  make_doc.py  pyproject.toml  requirements.txt  setup-lite.py  setup.cfg  setup.py  t  test_cmd.py  test_cmdrexx.py  test_cmdsystem.py  test_pgm.py  test_sh.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  lint.yml  pythonpackage.yml  release.yml
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst  requirements.txt  tracing.rst
itoolkit/: LICENSE  __init__.py  itoolkit.py
itoolkit/db2/: idb2call.py
itoolkit/doc/: README
itoolkit/lib/: ilibcall.c  ilibcall.py  itoollib.c
itoolkit/odbc/: iodbccall.py
itoolkit/rest/: irestcall.py
itoolkit/sample/: icmd_rtvjoba.py  ipase_ps.py  ipgm_bad_trace_rest.py  ipgm_zzcall.py  isleep_rest_async.py  isql_query.py  isql_rest_async.py  isrvpgm_qgyrhrl.py  ixml_diag.py
itoolkit/test/: itool400.py  itooldb2.py  itooldb2existing.py  itoolrest.py  rerun.py  test_0020_pgm.py  test_0030_srvpgm.py  test_0050_cmd_error.py  test_0060_pgm_error.py  tests.py
itoolkit/transport/: _base.py  _direct.c  db2.py  direct.py  http.py
samples/: README  config.py  config.py.sample  icmd5250_dspsyssts.py  ipgm_bad_trace_db2.py  ipgm_bad_trace_file.py  ipgm_bad_trace_rest.py  ipgm_bad_trace_terminal.py  isleep_rest_async.py  isql_callproc.py  isql_prepare.py  isql_rest_async.py  isrvpgm_qgyrhrl_hole.py  isrvpgm_zzarray.py  istop_msg_qsysopr_before_pgm_call.py  ixml_diag.py  ixml_zzvary.py
src/itoolkit/: README  __init__.py  base.py  command.py  errors.py  itoolkit.py  program_call.py  shell.py  sql.py  toolkit.py
src/itoolkit/db2/: idb2call.py
src/itoolkit/lib/: ilibcall.py
src/itoolkit/rest/: irestcall.py
src/itoolkit/transport/: __init__.py  _direct.py  base.py  database.py  direct.c  direct.py  errors.py  http.py  ssh.py
test/: README  config.py  test_0040_cmd_with_io.py
tests/: conftest.py  test_cmd_error.py  test_cmd_rexx.py  test_deprecated_transports.py  test_pgm.py  test_pgm_error.py  test_srvpgm.py  test_unit_cmd.py  test_unit_cmd5250.py  test_unit_data.py  test_unit_idb2call.py  test_unit_irestcall.py  test_unit_pgm.py  test_unit_sh.py  test_unit_sql_execute.py  test_unit_sql_fetch.py  test_unit_sql_free.py  test_unit_sql_parm.py  test_unit_sql_prepare.py  test_unit_sql_query.py  test_unit_srvpgm.py  test_unit_transport_database.py  test_unit_transport_direct.py  test_unit_transport_http.py  test_unit_transport_ssh.py
