[tool.poetry]
name = "itoolkit"
version = "1.7.1-rc"
description = "IBM i XMLSERVICE toolkit for Python"
readme = "README.md"
homepage = "https://github.com/IBM/python-itoolkit"
repository = "https://github.com/IBM/python-itoolkit"
documentation = "https://python-itoolkit.readthedocs.io"
license = "MIT"
authors = [
    "Kevin Adler <kadler@us.ibm.com>",
    "Tony Cairns <adc@us.ibm.com>",
]
packages = [
    { include = "itoolkit", from = "src" },
]
include = [
    { path = "tests/*", format = "sdist" },
    { path = "samples/*", format = "sdist" },
    { path = "docs/*", format = "sdist" },
    { path = "setup.cfg", format = "sdist" },
    { path = "CONTRIBUTING.md", format = "sdist" },
    { path = "contributors.txt", format = "sdist" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System",
]

[tool.poetry.dependencies]
python = ">=2.7,<3.0.0 || >=3.4.0,<4"


[tool.poetry.dev-dependencies]
pytest = ">=4.0.1"
pytest-mock = ">=1.10.0"
flake8 = ">=3.6.0"
mock = "^3.0.5"
bumpversion = "^0.5.0"
pytest-cov = "~2.8"
coverage = ">=4.5.4"
sphinx = ">=1.8.4"
sphinx-rtd-theme = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0a6"]
build-backend = "poetry.core.masonry.api"
