[tool.poetry]
name = "itoolkit"
version = "2.0.0-dev"
description = "IBM i XMLSERVICE toolkit for Python"
readme = "README.md"
homepage = "https://github.com/IBM/python-itoolkit"
repository = "https://github.com/IBM/python-itoolkit"
documentation = "https://python-itoolkit.readthedocs.io"
license = "MIT"
authors = [
    "Korinne Adler <kadler@us.ibm.com>",
    "Tony Cairns <adc@us.ibm.com>",
]
packages = [
    { include = "itoolkit", from = "src" },
]
include = [
    { path = "tests/*", format = "sdist" },
    { path = "samples/*", format = "sdist" },
    { path = "docs/*", format = "sdist" },
    { path = "setup.cfg", format = "sdist" },
    { path = "CONTRIBUTING.md", format = "sdist" },
    { path = "contributors.txt", format = "sdist" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System",
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.14.0"


[tool.poetry.dev-dependencies]
pytest = [
    { version = ">=7.2.1", python = ">=3.11" },
    { version = ">=6.2.5", python = ">=3.10, <3.11" },
    { version = ">=5.0.0", python = "<3.10" },
]
pytest-mock = [
    { version = ">=3.7.0", python = ">=3.7" },
]
coverage = [
    { version = ">=6.3.0", python = ">=3.7" },
]
coveralls = [
    { version = ">=3.3.0", python = ">=3.5" },
]
pytest-cov = "~2.12.0"
flake8 = ">=3.6.0"
mock = "^3.0.5"
bumpversion = "^0.5.0"
sphinx = ">=1.8.4"
sphinx-rtd-theme = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0a6"]
build-backend = "poetry.core.masonry.api"
